[package]
name = "bevy-pipelined-testing"
version = "0.1.0"
edition = "2018"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "pipelined-rendering" }
bevy-inspector-egui = { git = "https://github.com/jakobhellermann/bevy-inspector-egui", branch = "bevy-pipelined" }
bevy_mod_debugdump = { git = "https://github.com/jakobhellermann/bevy_mod_debugdump", branch = "pipelined" }

# [patch."https://github.com/bevyengine/bevy"]
# bevy = { path = "/home/jakob/dev/rust/contrib/bevy/bevy" }